src/templates/blog-post-full-width.css
h1 {font-size: 37.32px;}
h2 {font-size: 31.1px;}
h3 {font-size: 25.92px;}
h4 {font-size: 21.6px;}
p {font-size: 18px;}

h1,h2,h3,h4,h5,h6,p
{
  color: #424242;
}
p
{
  color: #616161;
}

h1 {font-size: 37.32px;}
h2 {font-size: 31.1px;}
h3 {font-size: 25.92px;}
h4 {font-size: 21.6px;}
p {font-size: 18px;}

blockquote
{
  border-left: 5px solid #2096F3;
  margin-left: 0;
  padding-left: 20px;
}

blockquote > p
{
  margin: 0;
  font-size: 25px;
  font-weight: 300;
  color: #666666;
}

blockquote > p > strong
{
  font-weight: 400;
}

code
{
  background-color: #f2f2f2;

  display: block;
  padding: 10px 0px 10px 15px;
  color: #222222;
}

strong
{
  font-weight: 700;
}

